Fix footer icon spacing

--- a/spritesanddice/static/scss/main/main.scss
+++ b/spritesanddice/static/scss/main/main.scss
@@ -180,3 +180,26 @@ main{
 
     }
 }
+
+.footer-social-icons,
+.header-social-icons {
+	display: flex!important;
+	justify-content: space-between;
+	max-width: 18em; // 1em * 6 icons = 18em. May need to change when the # of icons increases
+	margin-left: auto;
+	margin-right: .4em;
+
+	a {
+		transition: 0.2s linear color;
+		padding: 0 1em;
+		&.discord:hover{
+			color: $discord;
+		}
+		&.patreon:hover{
+			color: $patreon;
+		}
+		&:hover{
+			color: #FFF;
+		}
+	}
+}
